--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
 	<link rel="stylesheet" href="styles/main.css" type="text/css">
 </head>
 <body>
-	<div id="stage">
-		<div id="backclouds"></div>
-		<div id="middleclouds"></div>
-		<div id="frontclouds"></div>
+	<div>kjrbdfa.kerbfj.ekrjgbe.rkjgbfer.kjgb.erkjfg.kejrbg.kjb.kjbg.kaejrbv.kjaebfv.kadfjbv.kaebv.akejbv.kaejrbf.kerjbg.kjaebr.vkjbef.kjvbd.fkjvb.kfjvbe.kfjb.</div>
+	<div id="stageWrap">
+		<div id="stage">
+			<div id="backclouds"></div>
+			<div id="text"></div>
+			<div id="middleclouds"></div>
+			<div id="frontclouds"></div>
+		</div>
 	</div>
+	<!-- <div style="height: 3000px"></div> -->
 	
+	<script src="scripts/jquery.js"></script>
 	<script src="scripts/main.js"></script>
 </body>
 </html>
