Spritesheet Character Animation Added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<link rel="stylesheet" href="styles/main.css" type="text/css">
 </head>
 <body>
-	<div>kjrbdfa.kerbfj.ekrjgbe.rkjgbfer.kjgb.erkjfg.kejrbg.kjb.kjbg.kaejrbv.kjaebfv.kadfjbv.kaebv.akejbv.kaejrbf.kerjbg.kjaebr.vkjbef.kjvbd.fkjvb.kfjvbe.kfjb.</div>
+	<div id="scrollSpacer"></div>
+	
 	<div id="stageWrap">
 		<div id="stage">
 			<div id="backclouds"></div>
@@ -15,7 +16,41 @@
 			<div id="frontclouds"></div>
 		</div>
 	</div>
-	<!-- <div style="height: 3000px"></div> -->
+	<hr>
+
+	<div class="picRow" id="row1">
+		<div class="pics"></div>
+		<div class="pics"></div>
+		<div class="pics"></div>
+		<div class="pics"></div>
+		<div class="pics"></div>
+	</div>
+	<div class="picRow" id="row2">
+		<div class="pics"></div>
+		<div class="pics"></div>
+		<div class="pics"></div>
+		<div class="pics"></div>
+		<div class="pics"></div>
+	</div>
+	
+	<div id="characterLand">
+		<div id="sun"></div>
+		<div id="clouds"></div>
+		<div id="mountains">
+			<div class="mtns"></div>
+			<div class="mtns"></div>
+			<div class="mtns"></div>
+			<div class="mtns"></div>
+			<div class="mtns"></div>
+			<div class="mtns"></div>
+			<div class="mtns"></div>
+			<div class="mtns"></div>
+
+		</div>
+		<div id="ground"></div>
+		<div id="character"></div>
+	</div>
+	
 	
 	<script src="scripts/jquery.js"></script>
 	<script src="scripts/main.js"></script>
